src/cfml/parsing/cfmentat/antlr/CFMLParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /Users/denny/Documents/workspace-cfe-trunk/cfml.parsing/src/cfml/parsing/cfmentat/antlr/CFML.g 2010-02-11 02:28:49
 package cfml.parsing.cfmentat.antlr; 

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class CFMLParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "DOESNOTCONTAIN", "VARLOCAL", "FUNCTIONCALL", "JAVAMETHODCALL", "EMPTYARGS", "FUNCDECL", "POSTMINUSMINUS", "POSTPLUSPLUS", "WS", "LINE_COMMENT", "ML_COMMENT", "BOOLEAN_LITERAL", "DoubleStringCharacter", "SingleStringCharacter", "STRING_LITERAL", "LETTER", "DIGIT", "NULL", "CONTAINS", "CONTAIN", "DOES", "IS", "GT", "GE", "GTE", "LTE", "LT", "LE", "EQ", "EQUAL", "EQUALS", "NEQ", "LESS", "THAN", "GREATER", "OR", "TO", "IMP", "EQV", "XOR", "AND", "NOT", "MOD", "VAR", "IF", "ELSE", "BREAK", "CONTINUE", "FUNCTION", "RETURN", "WHILE", "DO", "FOR", "IN", "TRY", "CATCH", "SWITCH", "CASE", "DEFAULT", "SCRIPTCLOSE", "DOT", "STAR", "SLASH", "BSLASH", "POWER", "PLUS", "PLUSPLUS", "MINUS", "MINUSMINUS", "MODOPERATOR", "CONCAT", "EQUALSEQUALSOP", "EQUALSOP", "PLUSEQUALS", "MINUSEQUALS", "STAREQUALS", "SLASHEQUALS", "MODEQUALS", "CONCATEQUALS", "COLON", "NOTOP", "SEMICOLON", "OROPERATOR", "ANDOPERATOR", "LEFTBRACKET", "RIGHTBRACKET", "LEFTPAREN", "RIGHTPAREN", "LEFTCURLYBRACKET", "RIGHTCURLYBRACKET", "IDENTIFIER", "DecimalDigit", "INTEGER_LITERAL", "ExponentPart", "FLOATING_POINT_LITERAL", "','", "'DOT'", "'<'", "'<='", "'>'", "'>='", "'!='", "'#'"
    };
    public static final int MINUS=71;
    public static final int DecimalDigit=95;
    public static final int CONCATEQUALS=82;
    public static final int LEFTPAREN=90;
    public static final int BOOLEAN_LITERAL=15;
    public static final int MODEQUALS=81;
    public static final int PLUSPLUS=70;
    public static final int PLUSEQUALS=77;
    public static final int CONTINUE=51;
    public static final int DOT=64;
    public static final int EMPTYARGS=8;
    public static final int TO=40;
    public static final int AND=44;
    public static final int FUNCTION=52;
    public static final int GTE=28;
    public static final int CONCAT=74;
    public static final int LEFTBRACKET=88;
    public static final int STRING_LITERAL=18;
    public static final int LE=31;
    public static final int SingleStringCharacter=17;
    public static final int RIGHTPAREN=91;
    public static final int PLUS=69;
    public static final int VARLOCAL=5;
    public static final int STAREQUALS=79;
    public static final int INTEGER_LITERAL=96;
    public static final int POSTMINUSMINUS=10;
    public static final int DOES=24;
    public static final int FUNCDECL=9;
    public static final int POSTPLUSPLUS=11;
    public static final int OROPERATOR=86;
    public static final int WS=12;
    public static final int EQ=32;
    public static final int EQUALSOP=76;
    public static final int LT=30;
    public static final int LINE_COMMENT=13;
    public static final int FLOATING_POINT_LITERAL=98;
    public static final int CATCH=59;
    public static final int EQUALS=34;
    public static final int GE=27;
    public static final int CASE=61;
    public static final int ExponentPart=97;
    public static final int EQUAL=33;
    public static final int ELSE=49;
    public static final int SEMICOLON=85;
    public static final int JAVAMETHODCALL=7;
    public static final int BSLASH=67;
    public static final int BREAK=50;
    public static final int MODOPERATOR=73;
    public static final int NULL=21;
    public static final int XOR=43;
    public static final int COLON=83;
    public static final int IDENTIFIER=94;
    public static final int DoubleStringCharacter=16;
    public static final int MINUSMINUS=72;
    public static final int T__100=100;
    public static final int ANDOPERATOR=87;
    public static final int EQV=42;
    public static final int NOTOP=84;
    public static final int T__101=101;
    public static final int MOD=46;
    public static final int T__104=104;
    public static final int OR=39;
    public static final int T__106=106;
    public static final int LESS=36;
    public static final int CONTAIN=23;
    public static final int EQUALSEQUALSOP=75;
    public static final int CONTAINS=22;
    public static final int GREATER=38;
    public static final int DIGIT=20;
    public static final int ML_COMMENT=14;
    public static final int NEQ=35;
    public static final int LETTER=19;
    public static final int DO=55;
    public static final int LEFTCURLYBRACKET=92;
    public static final int SLASH=66;
    public static final int WHILE=54;
    public static final int SWITCH=60;
    public static final int POWER=68;
    public static final int FUNCTIONCALL=6;
    public static final int IS=25;
    public static final int GT=26;
    public static final int T__99=99;
    public static final int DOESNOTCONTAIN=4;
    public static final int IN=57;
    public static final int T__103=103;
    public static final int LTE=29;
    public static final int VAR=47;
    public static final int RIGHTBRACKET=89;
    public static final int THAN=37;
    public static final int RETURN=53;
    public static final int T__105=105;
    public static final int SCRIPTCLOSE=63;
    public static final int IF=48;
    public static final int SLASHEQUALS=80;
    public static final int EOF=-1;
    public static final int IMP=41;
    public static final int FOR=56;
    public static final int DEFAULT=62;
    public static final int STAR=65;
    public static final int NOT=45;
    public static final int TRY=58;
    public static final int RIGHTCURLYBRACKET=93;
    public static final int MINUSEQUALS=78;
    public static final int T__102=102;

    // delegates
    // delegators


        public CFMLParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public CFMLParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
            this.state.ruleMemo = new HashMap[229+1];
             
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return CFMLParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/denny/Documents/workspace-cfe-trunk/cfml.parsing/src/cfml/parsing/cfmentat/antlr/CFML.g"; }

     public boolean scriptMode = true; 

    protected void mismatch( IntStream input, int ttype, BitSet follow ) throws RecognitionException {
      throw new MismatchedTokenException(ttype, input);
    }
    	
    public Object recoverFromMismatchedSet( IntStream input, RecognitionException e, BitSet follow ) throws RecognitionException{
      throw e;
    }


    public static class scriptBlock_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "scriptBlock"
    // /Users/denny/Documents/workspace-cfe-trunk/cfml.parsing/src/cfml/parsing/cfmentat/antlr/CFML.g:285:1: scriptBlock : ( element )* endOfScriptBlock ;
    public final CFMLParser.scriptBlock_return scriptBlock() throws RecognitionException {
        CFMLParser.scriptBlock_return retval = new CFMLParser.scriptBlock_return();
        retval.start = input.LT(1);
        int scriptBlock_StartIndex = input.index();
        CommonTree root_0 = null;

        CFMLParser.element_return element1 = null;

        CFMLParser.endOfScriptBlock_return endOfScriptBlock2 = null;



        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return retval; }
            // /Users/denny/Documents/workspace-cfe-trunk/cfml.parsing/src/cfml/parsing/cfmentat/antlr/CFML.g:286:3: ( ( element )* endOfScriptBlock )
            // /Users/denny/Documents/workspace-cfe-trunk/cfml.parsing/src/cfml/parsing/cfmentat/antlr/CFML.g:286:5: ( element )* endOfScriptBlock
            {
            root_0 = (CommonTree)adaptor.nil();

            // /Users/denny/Documents/workspace-cfe-trunk/cfml.parsing/src/cfml/parsing/cfmentat/antlr/CFML.g:286:5: ( element )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==BOOLEAN_LITERAL||LA1_0==STRING_LITERAL||LA1_0==NULL||(LA1_0>=CONTAIN && LA1_0<=DOES)||(LA1_0>=LESS && LA1_0<=GREATER)||LA1_0==TO||LA1_0==NOT||(LA1_0>=VAR && LA1_0<=DEFAULT)||(LA1_0>=PLUS && LA1_0<=MINUSMINUS)||(LA1_0>=NOTOP && LA1_0<=SEMICOLON)||LA1_0==LEFTBRACKET||LA1_0==LEFTPAREN||LA1_0==LEFTCURLYBRACKET||LA1_0==IDENTIFIER||LA1_0==INTEGER_LITERAL||LA1_0==FLOATING_POINT_LITERAL||LA1_0==106) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /Users/denny/Documents/workspace-cfe-trunk/cfml.parsing/src/cfml/parsing/cfmentat/antlr/CFML.g:286:7: element
            	    {
            	    pushFollow(FOLLOW_element_in_scriptBlock1165);
            	    element1=element();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, element1.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            pushFollow(FOLLOW_endOfScriptBlock_in_scriptBlock1170);
            endOfScriptBlock2=endOfScriptBlock();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, endOfScriptBlock2.getTree());

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

        catch (RecognitionException e) {
          throw e;
        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 1, scriptBlock_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "scriptBlock"

    public static class endOfScriptBlock_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "endOfScriptBlock"
    // /Users/denny/Documents/workspace-cfe-trunk/cfml.parsing/src/cfml/parsing/cfmentat/antlr/CFML.g:289:1: endOfScriptBlock : ( SCRIPTCLOSE | EOF );
    public final CFMLParser.endOfScriptBlock_return endOfScriptBlock() throws RecognitionException {
        CFMLParser.endOfScriptBlock_return retval = new CFMLParser.endOfScriptBlock_return();
        retval.start = input.LT(1);
        int endOfScriptBlock_StartIndex = input.index();
        CommonTree root_0 = null;

        Token set3=null;

        CommonTree set3_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return retval; }
            // /Users/denny/Documents/workspace-cfe-trunk/cfml.parsing/src/cfml/parsing/cfmentat/antlr/CFML.g:290:3: ( SCRIPTCLOSE | EOF )
            // /Users/denny/Documents/workspace-cfe-trunk/cfml.parsing/src/cfml/parsing/cfmentat/antlr/CFML.g:
            {
            root_0 = (CommonTree)adaptor.nil();

            set3=(Token)input.LT(1);
            if ( input.LA(1)==EOF||input.LA(1)==SCRIPTCLOSE ) {
                input.consume();
                if ( state.backtracking==0 ) adaptor.addChild(root_0, (CommonTree)adaptor.create(set3));
                state.errorRecovery=false;state.failed=false;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

        catch (RecognitionException e) {
          throw e;
        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 2, endOfScriptBlock_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "endOfScriptBlock"

    public static class element_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "element"
    // /Users/denny/Documents/workspace-cfe-trunk/cfml.parsing/src/cfml/parsing/cfmentat/antlr/CFML.g:294:1: element : ( FUNCTION identifier LEFTPAREN ( parameterList )? RIGHTPAREN compoundStatement -> ^( FUNCDECL identifier ( parameterList )? compoundStatement ) | statement );
    public final CFMLParser.element_return element() throws RecognitionException {
        CFMLParser.element_return retval = new CFMLParser.element_return();
        retval.start = input.LT(1);
        int element_StartIndex = input.index();
        CommonTree root_0 = null;

        Token FUNCTION4=null;
        Token LEFTPAREN6=null;
        Token RIGHTPAREN8=null;
        CFMLParser.identifier_return identifier5 = null;

        CFMLParser.parameterList_return parameterList7 = null;

        CFMLParser.compoundStatement_return compoundStatement9 = null;

        CFMLParser.statement_return statement10 = null;


        CommonTree FUNCTION4_tree=null;
        CommonTree LEFTPAREN6_tree=null;
        CommonTree RIGHTPAREN8_tree=null;
        RewriteRuleTokenStream stream_LEFTPAREN=new RewriteRuleTokenStream(adaptor,"token LEFTPAREN");
        RewriteRuleTokenStream stream_FUNCTION=new RewriteRuleTokenStream(adaptor,"token FUNCTION");
        RewriteRuleTokenStream stream_RIGHTPAREN=new RewriteRuleTokenStream(adaptor,"token RIGHTPAREN");
        RewriteRuleSubtreeStream stream_parameterList=new RewriteRuleSubtreeStream(adaptor,"rule parameterList");
        RewriteRuleSubtreeStream stream_compoundStatement=new RewriteRuleSubtreeStream(adaptor,"rule compoundStatement");
        RewriteRuleSubtreeStream stream_identifier=new RewriteRuleSubtreeStream(adaptor,"rule identifier");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return retval; }
            // /Users/denny/Documents/workspace-cfe-trunk/cfml.parsing/src/cfml/parsing/cfmentat/antlr/CFML.g:295:3: ( FUNCTION identifier LEFTPAREN ( parameterList )? RIGHTPAREN compoundStatement -> ^( FUNCDECL identifier ( parameterList )? compoundStatement ) | statement )
            int alt3=2;
            alt3 = dfa3.predict(input);
            switch (alt3) {
                case 1 :
                    // /Users/denny/Documents/workspace-cfe-trunk/cfml.parsing/src/cfml/parsing/cfmentat/antlr/CFML.g:295:5: FUNCTION identifier LEFTPAREN ( parameterList )? RIGHTPAREN compoundStatement
                    {
                    FUNCTION4=(Token)match(input,FUNCTION,FOLLOW_FUNCTION_in_element1205); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_FUNCTION.add(FUNCTION4);

                    pushFollow(FOLLOW_identifier_in_element1207);
                    identifier5=identifier();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_identifier.add(identifier5.getTree());
                    LEFTPAREN6=(Token)match(input,LEFTPAREN,FOLLOW_LEFTPAREN_in_element1209); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_LEFTPAREN.add(LEFTPAREN6);

                    // /Users/denny/Documents/workspace-cfe-trunk/cfml.parsing/src/cfml/parsing/cfmentat/antlr/CFML.g:295:35: ( parameterList )?
                    int alt2=2;
                    int LA2_0 = input.LA(1);

                    if ( ((LA2_0>=CONTAIN && LA2_0<=DOES)||(LA2_0>=LESS && LA2_0<=GREATER)||LA2_0==TO||(LA2_0>=VAR && LA2_0<=DEFAULT)||LA2_0==IDENTIFIER) ) {
                        alt2=1;
                    }
                    else if ( (LA2_0==RIGHTPAREN) ) {
                        int LA2_2 = input.LA(2);
